@@ -15,6 +15,9 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with OpenSesame.  If not, see <http://www.gnu.org/licenses/>.
+
+IMPORTANT NOTE: The parallel plug-in is not reliable, and will be replaced
+by the coroutines plugin.
 """
 
 from libopensesame.py3compat import *
@@ -24,26 +27,27 @@ import threading
 from libopensesame import sequence, debug
 from libqtopensesame.items import sequence as qtsequence
 from libqtopensesame.items import qtplugin
+from libqtopensesame.misc import _
 
 class parallel_process(threading.Thread):
 
 	"""A wrapper for a single process"""
-	
+
 	def __init__(self, item):
-	
+
 		"""
 		Constructor
-		
+
 		Arguments:
 		item -- the item to run
 		"""
-	
+
 		threading.Thread.__init__(self)
 		self.item = item
 		self.exception = None
-	
-	def run(self):	
-	
+
+	def run(self):
+
 		"""Runs the item"""
 
 		self.launch_time = self.item.time()
@@ -58,50 +62,50 @@ class parallel(sequence.sequence):
 	The parallel plug-in behaves much like a sequence, but it runs items in
 	parallel. The parallel exits when the last item is finished
 	"""
-	
+
 	def run(self):
-	
+
 		"""
 		Run the parallel
-		
+
 		Returns:
 		True on success, False on failure
 		"""
-			
+
 		# Optionally flush the responses to catch escape presses
 		if self._keyboard is not None:
 			self._keyboard.flush()
-			
+
 		# Do nothing if there are no items
 		if len(self._items) == 0:
 			return
-		
+
 		# The first item is the main item, which is not executed in a thread
 		item, cond = self._items[0]
 		if eval(cond):
 			main_item = self.experiment.items[item]
 		else:
 			main_item = None
-						
+
 		# Create a list of threads for the rest of the items
-		tl = []	
+		tl = []
 		if len(self._items) > 1:
-			for item, cond in self._items[1:]:		
-				if eval(cond):				
+			for item, cond in self._items[1:]:
+				if eval(cond):
 					tl.append(parallel_process(self.experiment.items[item]))
-										
+
 		# Run all threads
 		for t in tl:
 			t.start()
-			
+
 		# Run the main item
 		if main_item is not None:
 			self.launch_time = self.time()
 			main_item.run()
-					
+
 		# Wait for the threads to finish
 		while True:
-			alive = False		
+			alive = False
 			for t in tl:
 				if t.is_alive():
 					alive = True
@@ -116,9 +120,9 @@ class parallel(sequence.sequence):
 		debug.msg('main item was launched at %s' % self.launch_time)
 		for t in tl:
 			debug.msg('thread was launched at %s' % t.launch_time)
-			
-		return True	
-	
+
+		return True
+
 class qtparallel(qtsequence.sequence, qtplugin.qtplugin):
 
 	"""Parallel GUI"""
@@ -138,7 +142,14 @@ class qtparallel(qtsequence.sequence, qtplugin.qtplugin):
 
 		qtsequence.sequence.__init__(self, name, experiment, string)
 		self.item_type = 'parallel'
-		self.description = "Runs a number of items in parallel"		
+		self.description = "Runs a number of items in parallel"
 		qtplugin.qtplugin.__init__(self, __file__)
-		
 
+	def edit_widget(self):
+
+		qtplugin.qtplugin.edit_widget(self)
+		self.user_hint_widget.add(
+			_(u'Using the parallel plug-in is not recommended. For an '
+			u'alternative, see <a href="http://osdoc.cogsci.nl/usage/coroutines/"> '
+			u'coroutines</a>.'))
+		self.user_hint_widget.refresh()
